@@ -43,6 +43,8 @@ cupt (2.5.0~) UNRELEASED; urgency=low
         an alias instead of the full path in the error and warning messages.
       - Constructor: parsing index localization files: print an error when
         the file exists but can't be opened.
+      - Parsing release files: don't warn anymore if the 'archive' or 'vendor'
+        fields are missing.
     - Don't include a not exported header from cupt/common.hpp, making a
       development binary package usable again. Fixes a regression since
       2.3.0~rc1.
